Possible Safari fix for product grid images not showing

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -109,7 +109,7 @@
   bottom: 0;
   position: absolute;
   top: 0;
-  padding-top: 100%;
+//  padding-top: 100%;
 }
 
 .nursery-sets .card .media {
